--- a/palma/pages/login.htm
+++ b/palma/pages/login.htm
@@ -27,7 +27,7 @@ redirect="home"
         <button type="submit" class="enter">Войти</button>
       {{ form_close() }}
       {% else %}
-        {% partial 'redirect' %}
+        {% partial 'redirect' url="/" %}
       {% endif %}
     <div class><img class="biglogo" src="{{ 'assets/images/biglogo.png' | theme}}"></div>
   </div>
