--- a/palma/pages/main.htm
+++ b/palma/pages/main.htm
@@ -2,12 +2,16 @@ title = "Home"
 url = "/mainpage"
 layout = "default"
 ==
+{% if not user %}
 <div>
   <div class="parent">
     <div class><img class="biglogomain" src="{{ 'assets/images/biglogo.png' | theme}}"></div>
 
-    <button class="enter">Войти</button>
-    <button class="register">Регистрация</button>
+    <a href="{{ 'login'|page }}"><button class="enter">Войти</button></a>
+    <a href="{{ 'register'|page }}"><button class="register">Регистрация</button></a>
   </div>
  
 </div>
+{% else %}
+  {% partial 'redirect' url="/" %}
+{% endif %}
