added footer menu and specialist page, fixes

--- a/palma/pages/home.htm
+++ b/palma/pages/home.htm
@@ -9,8 +9,8 @@ layout = "default"
         <div class="swiper-slide">
             <a class="game-link" href="{{ 'game1'|page}}">
                 <img src="{{ 'assets/images/games/1.png' | theme }}">
-                <h2>Следи за мячиком</h2>
-                <h3>Нужно уследить за мячиком, подсвеченным на старте</h3>
+                <h2>Концентрация дыхания</h2>
+                <h3>Задача дышать в ритм с шариком</h3>
             </a>
         </div>
         <div class="swiper-slide">
